Fix scrollbar appearing on Safari

--- a/assets/_sass/pages/_archive.scss
+++ b/assets/_sass/pages/_archive.scss
@@ -106,7 +106,7 @@
       position: relative;
       box-sizing: content-box;
       @include structure($size__content-margin--post, 'margin');
-      overflow-x: hidden;
+      overflow: hidden;
 
       @each $size in ('medium', 'large', 'xlarge') {
         @include breakpoint($size) {
